--- a/web/css/style.less
+++ b/web/css/style.less
@@ -58,14 +58,14 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 /* STYLE GENERAL */
 body {
     font-size: 16px;
-    background-image: url('../images/textured_stripes');
+    background-image: url('../images/textured_stripes.png');
     background-repeat: repeat;
     font-family:'GreyscaleBasicRegular';
 }
 
 :focus {
     outline: none;
-};
+}
 
 li, ul {
     list-style-type: none;
@@ -109,6 +109,9 @@ li, ul {
     display:inline-block;
     text-align: right;
     width:25em;
+    &:hover {
+        color: #888888;
+    }
 }
 
 /* STYLE DE LA VUE CONNEXION - member_login.php
@@ -116,11 +119,12 @@ ET STYLE DE LA VUE AJOUTER - ajouter.php */
 .intro{
     font-family:'firsttestRegular';
     color: #888888;
-    font-size:1.3em;
+    font-size:1.5em;
+    text-transform: uppercase;
     margin-bottom:1em;
 }
 
-#formRegister, #formAdd, #formChoose, #formModify {
+#formRegister, #formAdd, #formChoose, #formModify, #formSignin {
     width: 15em;
     display: inline-block;
 }
@@ -128,7 +132,8 @@ ET STYLE DE LA VUE AJOUTER - ajouter.php */
 #formRegister label, 
 #formAdd label,
 #formChoose label,
-#formModify label{
+#formModify label,
+#formSignin label{
     display: inline-block;
     width: 50%;
 }
@@ -136,20 +141,22 @@ ET STYLE DE LA VUE AJOUTER - ajouter.php */
 #formRegister input, 
 #formAdd input, 
 #formChoose input,
-#formModify input{
+#formModify input,
+#formSignin input{
     margin-bottom:0.8em;
     margin-left: 0;
 }
 
 .submitButton {
-    padding:0.2;
+    padding:0.2em 0.4em;
     font-family:'firsttestRegular';
     color: #FFFFFF;
     background-color: #669999;
     border:none;
     border-radius: 3px;
     cursor: pointer;
-    font-size:1.1em;
+    font-size:1.3em;
+    text-transform: uppercase;
 }
 
 .submitButton:hover {
