--- a/web/css/style.less
+++ b/web/css/style.less
@@ -164,6 +164,14 @@ ET STYLE DE LA VUE AJOUTER - ajouter.php */
     background-color: #D9D9D9;
 }
 
+#registration {
+    display: block;
+    color: #669999;
+    &:hover {
+        color: #D9D9D9;
+    }
+}
+
 
 /*STYLE DE LA VUE AFFICHER - afficher.php*/
 .fiche {
