--- a/web/css/style.less
+++ b/web/css/style.less
@@ -88,6 +88,8 @@ li, ul {
     color: #669999;
     font-size: 3em;
     text-shadow: 1px 1px 0px white;
+    background-image: url('../images/logo.png');
+    background-repeat: no-repeat;
 }
 
 #contenu {
