--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,286 +1,1 @@
-/* 
-    Document   : styles.css
-    Created on : 5 mars 2012, 15:28:02
-    Author     : dominique
-    Description:
-        Purpose of the stylesheet follows.
-*/
-/* 
-   TODO customize this sample style
-   Syntax recommendation http://www.w3.org/TR/REC-CSS2/
-*/
-/* http://meyerweb.com/eric/tools/css/reset/ */
-/* v1.0 | 20080212 */
-@font-face {
-  font-family: 'firsttestRegular';
-  src: url('../polices/Forque-webfont.eot');
-  src: url('Forque-webfont.eot?#iefix') format('embedded-opentype'), url('../polices/Forque-webfont.woff') format('woff'), url('../polices/Forque-webfont.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'GreyscaleBasicRegular';
-  src: url('../polices/Greyscale_Basic_Regular-webfont.eot');
-  src: url('../polices/Greyscale_Basic_Regular-webfont.eot?#iefix') format('embedded-opentype'), url('../polices/Greyscale_Basic_Regular-webfont.woff') format('woff'), url('../polices/Greyscale_Basic_Regular-webfont.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-font,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent;
-}
-/* STYLE GENERAL */
-body {
-  font-size: 16px;
-  background-image: url('../images/textured_stripes.png');
-  background-repeat: repeat;
-  font-family: 'GreyscaleBasicRegular';
-}
-:focus {
-  outline: none;
-}
-li,
-ul {
-  list-style-type: none;
-}
-#page {
-  max-width: 78em;
-  min-width: 64em;
-  margin: 0 auto;
-  width: 80%;
-}
-#header {
-  margin: 0 auto;
-  width: 29em;
-}
-#header h1 {
-  font-family: 'firsttestRegular';
-  color: #669999;
-  font-size: 3em;
-  text-shadow: 1px 1px 0px white;
-  background-image: url('../images/logo.png');
-  background-repeat: no-repeat;
-}
-#contenu {
-  margin: 0 auto;
-  width: 25em;
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid #669999;
-  padding: 2em;
-  display: table;
-}
-#contenu > span {
-  color: #669999;
-  font-weight: bold;
-}
-#disconnect {
-  color: #669999;
-  display: inline-block;
-  text-align: right;
-  width: 25em;
-}
-#disconnect:hover {
-  color: #888888;
-}
-/* STYLE DE LA VUE CONNEXION - member_login.php
-ET STYLE DE LA VUE AJOUTER - ajouter.php */
-.intro {
-  font-family: 'firsttestRegular';
-  color: #888888;
-  font-size: 1.5em;
-  text-transform: uppercase;
-  margin-bottom: 1em;
-}
-#formRegister,
-#formAdd,
-#formChoose,
-#formModify,
-#formSignin {
-  width: 15em;
-  display: inline-block;
-}
-#formRegister label,
-#formAdd label,
-#formChoose label,
-#formModify label,
-#formSignin label {
-  display: inline-block;
-  width: 50%;
-}
-#formRegister input,
-#formAdd input,
-#formChoose input,
-#formModify input,
-#formSignin input {
-  margin-bottom: 0.8em;
-  margin-left: 0;
-}
-.submitButton {
-  padding: 0.2em 0.4em;
-  font-family: 'firsttestRegular';
-  color: #FFFFFF;
-  background-color: #669999;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-  font-size: 1.3em;
-  text-transform: uppercase;
-}
-.submitButton:hover {
-  color: #669999;
-  background-color: #D9D9D9;
-}
-#registration {
-  display: block;
-  color: #669999;
-}
-#registration:hover {
-  color: #D9D9D9;
-}
-/*STYLE DE LA VUE AFFICHER - afficher.php*/
-.fiche {
-  width: 50%;
-}
-/*STYLE DE LA VUE CHOISIR - choisir.php*/
-#infos {
-  margin: 1em 0 1em 0;
-}
-#infos a {
-  color: #669999;
-}
-#infos p {
-  margin: 0.1em 0 0.1em 0;
-}
-#infos p:nth-of-type(1) {
-  font-style: italic;
-}
-#vignettes {
-  margin: 0.4em 0 0.4em 0;
-}
-#formChoose input:nth-of-type(1),
-#formChoose input:nth-of-type(2),
-#formChoose input:nth-of-type(3) {
-  display: none;
-}
-#formChoose button {
-  padding: 0.2;
-  color: #FFFFFF;
-  background-color: #669999;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-  font-size: 0.8em;
-}
-#formChoose button:hover {
-  color: #669999;
-  background-color: #D9D9D9;
-}
-#vignettes li img {
-  width: 100px;
-  background-color: rgba(217, 217, 217, 0.5);
-  padding: 1em;
-  border: 1px solid #669999;
-}
-#vignettes li {
-  list-style-type: none;
-}
-/*STYLE DE LA VUE AFFICHER - afficher.php*/
-#linksList li {
-  width: 25em;
-  display: inline-block;
-  margin: 2em 0 0.4em 0;
-  padding-bottom: 0.8em;
-  border-bottom: 1px dashed #669999;
-}
-#linksList img {
-  width: 180px;
-}
-#linksList a {
-  color: #669999;
-}
-#infosSite {
-  margin-top: 0.2em;
-}
-#actions {
-  margin-top: 1em;
-  display: inline-block;
-  width: 25em;
-  text-align: right;
-}
-/*STYLE DE LA VUE MODIFIER - modifier.php*/
-#formModify {
-  margin-top: 1em;
-}
-#formModify img {
-  width: 100px;
-}
-#formModify ul {
-  display: inline-block;
-  width: 24em;
-}
+@font-face{font-family:'firsttestRegular';src:url('../polices/Forque-webfont.eot');src:url('Forque-webfont.eot?#iefix') format('embedded-opentype'),url('../polices/Forque-webfont.woff') format('woff'),url('../polices/Forque-webfont.ttf') format('truetype');font-weight:normal;font-style:normal}@font-face{font-family:'GreyscaleBasicRegular';src:url('../polices/Greyscale_Basic_Regular-webfont.eot');src:url('../polices/Greyscale_Basic_Regular-webfont.eot?#iefix') format('embedded-opentype'),url('../polices/Greyscale_Basic_Regular-webfont.woff') format('woff'),url('../polices/Greyscale_Basic_Regular-webfont.ttf') format('truetype');font-weight:normal;font-style:normal}html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{font-size:16px;background-image:url('../images/textured_stripes.png');background-repeat:repeat;font-family:'GreyscaleBasicRegular'}:focus{outline:0}li,ul{list-style-type:none}.titreOutliner{display:none}#page{max-width:78em;min-width:64em;margin:0 auto;width:80%}#header{margin:0 auto;width:29em}input[type="text"],input[type="password"],input[type="file"]{width:14em;display:block}#header a{font-family:'firsttestRegular';color:#699;font-size:3em;text-shadow:1px 1px 0 white;background-image:url('../images/logo.png');background-size:45px 45px;background-position:left;background-repeat:no-repeat;padding-left:1.2em;text-decoration:none}#header a:hover{color:#366;background-image:url('../images/logoH.png')}#contenu{margin:0 auto;width:25em;background-color:rgba(255,255,255,0.8);border:1px solid #699;padding:2em;display:table}#contenu>span{color:#699;font-weight:bold}#disconnect{color:#699;display:inline-block;text-align:right;width:25em}#disconnect:hover{color:#366}.intro{font-family:'firsttestRegular';color:#888;font-size:1.5em;text-transform:uppercase;margin-bottom:1em}.intro em{font-style:normal;font-size:.8em;color:#699;font-family:'GreyscaleBasicRegular';text-transform:lowercase}.intro a{color:#699}.intro a:hover{color:#366}#formRegister,#formAdd,#formChoose,#formModify,#formSignin{width:15em;display:inline-block}#formRegister label,#formAdd label,#formChoose label,#formModify label,#formSignin label{display:inline-block;width:50%}#formRegister input,#formAdd input,#formChoose input,#formModify input,#formSignin input{margin-bottom:.8em;margin-left:0}.submitButton{padding:.2em .4em;font-family:'firsttestRegular';color:#fff;background-color:#699;border:0;border-radius:3px;cursor:pointer;font-size:1.3em;text-transform:uppercase}.submitButton:hover{color:#699;background-color:#d9d9d9}#registration{display:block;color:#699}#registration:hover{color:#366}.fiche{width:50%}#infos{margin:1em 0 1em 0}#infos a{color:#699}#infos p{margin:.1em 0 .1em 0}#infos p:nth-of-type(1){font-style:italic}#vignettes{margin:.4em 0 .4em 0}#formChoose input:nth-of-type(1),#formChoose input:nth-of-type(2),#formChoose input:nth-of-type(3){display:none}#formChoose button{padding:.2em;color:#fff;background-color:#699;border:0;border-radius:3px;cursor:pointer;font-size:.8em}#formChoose button:hover{color:#699;background-color:#d9d9d9}#vignettes li img{width:100px;background-color:rgba(217,217,217,0.5);padding:1em;border:1px solid #699}#vignettes li{list-style-type:none}#linksList li{width:25em;display:inline-block;margin:2em 0 .4em 0;padding-bottom:.8em;border-bottom:1px dashed #699}#linksList img{width:180px}#linksList a{color:#699}#infosSite{margin-top:.2em}#actions{margin-top:1em;display:inline-block;width:25em;text-align:right}#formModify{margin-top:1em}#formModify img{width:100px}#formModify ul{display:inline-block;width:24em}@media screen and (max-width:800px){#page{max-width:48em;min-width:32em}}@media screen and (max-width:499px){#page{max-width:30em;min-width:28em}#header{width:27em}#contenu{display:block;width:24em}}@media screen and (max-width:320px){#page{max-width:21em;min-width:19em}#header{width:18em}#header a{font-size:2.3em;background-size:35px 35px}#contenu{width:14em}#linksList li{width:14em}#disconnect{width:14em}#actions{width:14em}}
